# terminal-colorsaurus

./: .gitignore  .mailmap  Cargo.toml  Justfile  benchmark.tsv  changelog.md  deny.toml  docs.sh  license-mit.txt  notes.md  readme.md  test.py  themes.sh  use-min-rust-version.sh
.cargo/: config.toml
.github/workflows/: ci.yml  python.yml  python.yml.patch
benchmark/: measurements.Rmd  update_rustdoc.py
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/pycolorsaurus/: Cargo.toml  Justfile  pyproject.toml
crates/pycolorsaurus/src/: lib.rs
crates/terminal-colorsaurus/: Cargo.toml
crates/terminal-colorsaurus/doc/: caveats.md  comparison.md  feature-detection.md  latency-rustdoc.md  terminal-survey.md
crates/terminal-colorsaurus/examples/: bg.rs  fg.rs  pager.rs  theme.rs
crates/terminal-colorsaurus/src/: cli_theme.rs  color.rs  color_scheme_tests.rs  error.rs  fmt.rs  lib.rs  quirks.rs  theme_mode_tests.rs  unsupported.rs  xparsecolor.rs  xterm.rs  xterm_parse.rs
crates/terminal-colorsaurus/src/io/: mod.rs  term_reader.rs  time_out.rs
crates/terminal-colorsaurus/src/io/poll/: macos.rs  unix.rs  windows.rs
crates/terminal-colorsaurus/src/trx/: mod.rs  unix.rs  unsupported.rs  windows.rs
crates/terminal-colorsaurus/src/trx/unix/: attr.rs  pty_utils.rs  tests.rs
crates/terminal-colorsaurus/src/trx/windows/: console_mode.rs  msys.rs
crates/termtheme/: Cargo.toml  license-apache.txt
crates/termtheme/src/: main.rs
crates/xparsecolor/: Cargo.toml  license-mit.txt
crates/xparsecolor/src/: lib.rs
crates/xterm-color/: Cargo.toml  changelog.md  readme.md
crates/xterm-color/src/: lib.rs
doc/: feature-detection.md  issues.md  latency-rustdoc.md  latency.md  terminal-survey.md  windows-read-with-timeout.md  windows.md
examples/: bg.rs  fg.rs  pager.rs  query.rs  theme.rs
examples/benchmark/: Cargo.toml
examples/benchmark/src/: main.rs
src/: color.rs  fmt.rs  lib.rs  main.rs  quirks.rs  terminal.rs  unsupported.rs  winapi.rs  xparsecolor.rs  xterm.rs
src/io/: mod.rs  read_until.rs  term_reader.rs
src/io/poll/: macos.rs  mod.rs  unix.rs  windows.rs
src/os/: mod.rs  unix_common.rs
src/os/macos/: poll.rs
src/os/unix/: mod.rs  poll.rs  raw_tty.rs  tty.rs
src/os/windows/: mod.rs
src/unix/: poll.rs
src/xterm/: io_utils.rs  quirks.rs
termtheme/: Cargo.toml
termtheme/src/: main.rs
tests/: pty.rs  query.rs
