[package]
name = "terminal-colorsaurus"
description = "A cross-platform library for determining the terminal's background and foreground color. It answers the question «Is this terminal dark or light?»."
readme = "readme.md"
repository = "https://github.com/bash/terminal-colorsaurus"
categories = ["command-line-interface"]
keywords = ["terminal", "light", "dark", "color-scheme", "cli"]
license = "MIT OR Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.70.0" # Search for `FIXME(msrv)` when bumping.
exclude = [".github", ".gitignore", "*.sh", "benchmark/**/*", "doc/issues.md", "deny.toml"]

[features]
default = ["query"]
query = ["dep:memchr", "dep:mio", "dep:terminal-trx", "dep:libc", "dep:windows-sys"]

[dependencies]
rgb = { version = "0.8.37", optional = true }
anstyle = { version = "1.0.7", optional = true }
cfg-if = "1.0.0"

[target.'cfg(any(unix, windows))'.dependencies]
memchr = { version = "2.7.1", optional = true }
terminal-trx = { version = "0.2.3", optional = true }

[target.'cfg(unix)'.dependencies]
mio = { version = "1", features = ["os-ext"], default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2.151", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"], optional = true } # Keep this in sync with terminal-trx's version to avoid duplicate deps.

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
