[package]
name = "termtheme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0" # Search for `FIXME(msrv)` when bumping.
publish = false # Not ready yet

[dependencies]
anstyle = "1.0.8"
anstyle-query = "1.1.1"
clap = { version = "4.4", features = ["derive"] }
terminal-colorsaurus.workspace = true
